# denv

./: .gitignore  CLEANUP_SUMMARY.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MIGRATION.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  denv.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: test.yml
src/denv/: __init__.py  cli.py  redactor.py
tests/: __init__.py  test_cli.py  test_redactor.py
